--- a/config/options.ini
+++ b/config/options.ini
@@ -47,7 +47,7 @@ DevIDs =
 [Chat]
 # Determines the prefix that must be used before commands in the Discord chat.
 # e.g if you set this to *, the play command would be triggered using *play.
-CommandPrefix = !
+CommandPrefix = KC
 
 # Restricts the bot to only listening to certain text channels. To use this, add
 # the IDs of the text channels you would like the bot to listen to, seperated by
@@ -78,10 +78,10 @@ SkipRatio = 0.5
 # Determines if downloaded videos will be saved to the audio_cache folder. If this is yes,
 # they will not be redownloaded if found in the folder and queued again. Else, videos will
 # be downloaded to the folder temporarily to play, then deleted after to avoid filling space.
-SaveVideos = yes
+SaveVideos = no
 
 # Mentions the user who queued a song when it starts to play.
-NowPlayingMentions = no
+NowPlayingMentions = yes
 
 # Automatically joins the owner's voice channel on startup, if possible. The bot must be on
 # the same server and have permission to join the channel.
@@ -89,7 +89,7 @@ AutoSummon = yes
 
 # Start playing songs from the autoplaylist.txt file after joining a channel. This does not
 # stop users from queueing songs, you can do that by restricting command access in permissions.ini.
-UseAutoPlaylist = yes
+UseAutoPlaylist = no
 
 # Sets if the autoplaylist should play through songs in a random order when enabled. If no,
 # songs will be played in a sequential order instead.
