--- a/config/options.ini
+++ b/config/options.ini
@@ -21,7 +21,7 @@
 # Find your bot's token here: https://discordapp.com/developers/applications/me/
 # Create a new application, with no redirect URI or boxes ticked.
 # Then click 'Create Bot User' on the application page and copy the token here.
-Token = NDM2MjUzNTc2NTM3NDQwMjU2.Dbk0VA.MvCZIrsH69i7-b7vvhERBdOuKj0
+Token = NDM3NjYwNjk2MDkyNzM3NTM2.Db5S0A.yV92Hq_CCjTOZnvROhVwya4pmWc
 
 # The bot supports converting Spotify links and URIs to YouTube videos and
 # playing them. To enable this feature, please fill in these two options with valid
